2010-12-24  Rik  <octave@nomad.inbox5.com>

	* audio/setaudio.m: Re-write docstring.

2010-12-23  Soren Hauberg  <hauberg@gmail.com>
	* signal/detrend.m: Also accept polynomial order as a string ("constant" or
	"linear") for compatibility with Matlab.

2010-12-22  Konstantinos Poulios  <logari81@gmail.com>

	* plot/private/__axis_label__.m: Trigger fltk graphics redraw immediately
	after setting an axis label.

2010-12-22  John W. Eaton  <jwe@octave.org>

	* optimization/optimset.m, optimization/optimget.m,
	optimization/__all_opts__.m: Consistently use lower case for
	storing and searching option names.

2010-12-22  John W. Eaton  <jwe@octave.org>

	* statistics/base/skewness.m: Make returned value have the same
	class as the input.

2010-12-21  John W. Eaton  <jwe@octave.org>

	* time/datevec.m: Style fixes.

2010-12-20  Ben Abbott <bpabbott@mac.com>

	* plot/__fltk_print__.m: Update figure for FLTK printing.  Bug #31884.

2010-12-19  John W. Eaton  <jwe@octave.org>

	* miscellaneous/run.m: Use source to execute script.

2010-12-18  Ben Abbott  <bpabbott@mac.com>

	* plot/view.m: Return azimuth and elevation for nargin == 0.

2010-10-28  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, sparse/module.mk, deprecated/sphcat.m,
	deprecated/spvcat.m: Deprecate sphcat and spvcat functions.

2010-12-17  John W. Eaton  <jwe@octave.org>

	* plot/comet3.m: New function.
	* plot/module.mk: Add comet3.m to the list
	* miscellaneous/unimplemented.m: Remove comet3 from the list.

2010-12-17  John W. Eaton  <jwe@octave.org>

	* plot/comet.m: Use __plt_get_axis_arg__ to extract axis
	argument.  Only switch to specified axis temporarily.

2010-12-16  Ben Abbott <bpabbott@mac.com>

	* miscellaneous/unimplemented.m: Remove isprop() form list of
	unimplemented functions.
	* plot/isprop.m: New function.

2010-12-16  Olaf Till <olaf.till@uni-jena.de>

	* optimization/sqp.m: Fix indexing error in sqp bounds selection. 

2010-12-14  Doug Stewart <doug.dastew@gmail.com>
